adding docker file

--- a/code/index.html
+++ b/code/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-l  <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <title>Fast Retailing</title>
   <base href="/">
   <link href="assets/images/favicon.ico" rel="icon" type="image/x-icon" />
